add more to batch coherence

--- a/notebooks/1.6-coherence-implementation-testing.ipynb
+++ b/notebooks/1.6-coherence-implementation-testing.ipynb
@@ -2,16 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "id": "4dc7697a",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "The nb_black extension is already loaded. To reload it, use:\n",
+      "  %reload_ext nb_black\n"
+     ]
+    },
     {
      "data": {
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 1;\n",
+       "                var nbb_cell_id = 60;\n",
        "                var nbb_unformatted_code = \"# Run if working locally\\n%load_ext autoreload\\n%autoreload 2\\n%load_ext nb_black\";\n",
        "                var nbb_formatted_code = \"# Run if working locally\\n%load_ext autoreload\\n%autoreload 2\\n%load_ext nb_black\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -43,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 61,
    "id": "88ee84b4",
    "metadata": {},
    "outputs": [
@@ -52,7 +62,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 21;\n",
+       "                var nbb_cell_id = 61;\n",
        "                var nbb_unformatted_code = \"import sqlite3\\nfrom sqlite3 import Error\\nimport pickle\\nimport os, sys\\nimport torch\\nimport config\\n\\nconfig.root_path = os.path.abspath(os.path.join(os.getcwd(), \\\"..\\\"))\\nsys.path.insert(0, config.root_path)\\n\\nfrom src.dataset.dataset import RawData\\nfrom src.dataset.wikisection_preprocessing import (\\n    tokenize,\\n    clean_sentence,\\n    preprocess_text_segmentation,\\n    format_data_for_db_insertion,\\n)\\nfrom src.dataset.utils import truncate_by_token\\nfrom db.dbv2 import Table, AugmentedTable, TrainTestTable\\nimport pprint\\n\\nfrom utils.metrics import windowdiff, pk\\n\\nfrom src.bertkeywords.src.similarities import Embedding, Similarities\\nfrom src.bertkeywords.src.keywords import Keywords\\nfrom src.encoders.coherence_v2 import Coherence\\nfrom src.dataset.utils import flatten, dedupe_list, truncate_string\";\n",
        "                var nbb_formatted_code = \"import sqlite3\\nfrom sqlite3 import Error\\nimport pickle\\nimport os, sys\\nimport torch\\nimport config\\n\\nconfig.root_path = os.path.abspath(os.path.join(os.getcwd(), \\\"..\\\"))\\nsys.path.insert(0, config.root_path)\\n\\nfrom src.dataset.dataset import RawData\\nfrom src.dataset.wikisection_preprocessing import (\\n    tokenize,\\n    clean_sentence,\\n    preprocess_text_segmentation,\\n    format_data_for_db_insertion,\\n)\\nfrom src.dataset.utils import truncate_by_token\\nfrom db.dbv2 import Table, AugmentedTable, TrainTestTable\\nimport pprint\\n\\nfrom utils.metrics import windowdiff, pk\\n\\nfrom src.bertkeywords.src.similarities import Embedding, Similarities\\nfrom src.bertkeywords.src.keywords import Keywords\\nfrom src.encoders.coherence_v2 import Coherence\\nfrom src.dataset.utils import flatten, dedupe_list, truncate_string\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -107,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 62,
    "id": "9bb2458b",
    "metadata": {},
    "outputs": [
@@ -116,7 +126,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 22;\n",
+       "                var nbb_cell_id = 62;\n",
        "                var nbb_unformatted_code = \"dataset_type = \\\"city\\\"\\ntable = Table(dataset_type)\\naugmented_table = AugmentedTable(dataset_type)\\ntrain_test_table = TrainTestTable(dataset_type)\";\n",
        "                var nbb_formatted_code = \"dataset_type = \\\"city\\\"\\ntable = Table(dataset_type)\\naugmented_table = AugmentedTable(dataset_type)\\ntrain_test_table = TrainTestTable(dataset_type)\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -148,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 63,
    "id": "cfd59c86",
    "metadata": {},
    "outputs": [
@@ -157,7 +167,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 23;\n",
+       "                var nbb_cell_id = 63;\n",
        "                var nbb_unformatted_code = \"data = table.get_all()\\n\\ntext_data = [x[1] for x in data]\\ntext_labels = [x[2] for x in data]\";\n",
        "                var nbb_formatted_code = \"data = table.get_all()\\n\\ntext_data = [x[1] for x in data]\\ntext_labels = [x[2] for x in data]\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -189,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 64,
    "id": "fcccad5d",
    "metadata": {},
    "outputs": [
@@ -198,7 +208,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 24;\n",
+       "                var nbb_cell_id = 64;\n",
        "                var nbb_unformatted_code = \"all_segments = table.get_all_segments()\\ntext_segments = [[y[1] for y in x] for x in all_segments]\\nsegments_labels = [[1 if i == 0 else 0 for i, y in enumerate(x)] for x in all_segments]\";\n",
        "                var nbb_formatted_code = \"all_segments = table.get_all_segments()\\ntext_segments = [[y[1] for y in x] for x in all_segments]\\nsegments_labels = [[1 if i == 0 else 0 for i, y in enumerate(x)] for x in all_segments]\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -229,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 65,
    "id": "e84fe0c2",
    "metadata": {},
    "outputs": [
@@ -238,7 +248,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 25;\n",
+       "                var nbb_cell_id = 65;\n",
        "                var nbb_unformatted_code = \"all_samples = [item for sublist in all_segments for item in sublist]\";\n",
        "                var nbb_formatted_code = \"all_samples = [item for sublist in all_segments for item in sublist]\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -267,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 66,
    "id": "2e6918d5",
    "metadata": {},
    "outputs": [
@@ -277,7 +287,7 @@
        "(13678, 92833, 6.78703026758298)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -286,7 +296,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 26;\n",
+       "                var nbb_cell_id = 66;\n",
        "                var nbb_unformatted_code = \"len(all_segments), len(all_samples), (len(all_samples) / len(all_segments))\";\n",
        "                var nbb_formatted_code = \"len(all_segments), len(all_samples), (len(all_samples) / len(all_segments))\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -315,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 67,
    "id": "295657fb",
    "metadata": {},
    "outputs": [
@@ -324,7 +334,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 27;\n",
+       "                var nbb_cell_id = 67;\n",
        "                var nbb_unformatted_code = \"samples = 5\\nmax_tokens = 400\\n\\nfor i, (segment, labels) in enumerate(\\n    zip(text_segments[:samples], segments_labels[:samples])\\n):\\n    for sentence, label in zip(segment, labels):\\n        # this is the training case. During inference, we will have no idea\\n        # when segments start and when they end.\\n        pass\";\n",
        "                var nbb_formatted_code = \"samples = 5\\nmax_tokens = 400\\n\\nfor i, (segment, labels) in enumerate(\\n    zip(text_segments[:samples], segments_labels[:samples])\\n):\\n    for sentence, label in zip(segment, labels):\\n        # this is the training case. During inference, we will have no idea\\n        # when segments start and when they end.\\n        pass\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -362,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 68,
    "id": "467789d7",
    "metadata": {},
    "outputs": [
@@ -372,7 +382,7 @@
        "[1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -381,7 +391,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 28;\n",
+       "                var nbb_cell_id = 68;\n",
        "                var nbb_unformatted_code = \"text_labels[:25]\";\n",
        "                var nbb_formatted_code = \"text_labels[:25]\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -410,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 69,
    "id": "0e420ecf",
    "metadata": {},
    "outputs": [
@@ -432,9 +442,9 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 29;\n",
-       "                var nbb_unformatted_code = \"# initialize the coherence library\\nmax_words_per_step = 4\\ncoherence = Coherence(max_words_per_step=max_words_per_step, kb_embeddings=True)\";\n",
-       "                var nbb_formatted_code = \"# initialize the coherence library\\nmax_words_per_step = 4\\ncoherence = Coherence(max_words_per_step=max_words_per_step, kb_embeddings=True)\";\n",
+       "                var nbb_cell_id = 69;\n",
+       "                var nbb_unformatted_code = \"# initialize the coherence library\\nmax_words_per_step = 3\\ncoherence = Coherence(max_words_per_step=max_words_per_step, kb_embeddings=True)\";\n",
+       "                var nbb_formatted_code = \"# initialize the coherence library\\nmax_words_per_step = 3\\ncoherence = Coherence(max_words_per_step=max_words_per_step, kb_embeddings=True)\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
        "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
        "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
