--- a/notebooks/1.6-batch-coherence.ipynb
+++ b/notebooks/1.6-batch-coherence.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 131,
    "id": "8b71ba8b",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 123;\n",
+       "                var nbb_cell_id = 131;\n",
        "                var nbb_unformatted_code = \"experimentation = SimpleExperiment()\\n\\nexperimentation.queue_experiment(\\n    CoherenceExperiment(\\n        dataset_type=\\\"city\\\",\\n        model_string=\\\"bert-base-uncased\\\",\\n        max_words_per_step=3,\\n        start=100,\\n        num_samples=16,\\n        same_word_multiplier=2,\\n        no_same_word_penalty=2,\\n        kb_embeddings=True,\\n        coherence_dump_on_prediction=False,\\n        coherence_threshold=0.2,\\n        prediction_threshold=0.5,\\n        pruning=1,\\n        pruning_min=6,\\n        batch_size=5,\\n    )\\n)\";\n",
        "                var nbb_formatted_code = \"experimentation = SimpleExperiment()\\n\\nexperimentation.queue_experiment(\\n    CoherenceExperiment(\\n        dataset_type=\\\"city\\\",\\n        model_string=\\\"bert-base-uncased\\\",\\n        max_words_per_step=3,\\n        start=100,\\n        num_samples=16,\\n        same_word_multiplier=2,\\n        no_same_word_penalty=2,\\n        kb_embeddings=True,\\n        coherence_dump_on_prediction=False,\\n        coherence_threshold=0.2,\\n        prediction_threshold=0.5,\\n        pruning=1,\\n        pruning_min=6,\\n        batch_size=5,\\n    )\\n)\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 132,
    "id": "b57a9097",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
      "output_type": "stream",
      "text": [
       "Running experiment set: bNFEu\n",
-      "Running experiment: CoherenceExperiment(num_samples=16, start=100, dataset_type='city', model_string='bert-base-uncased', max_words_per_step=3, same_word_multiplier=2, no_same_word_penalty=2, prediction_threshold=0.5, coherence_threshold=0.2, coherence_dump_on_prediction=False, pruning=1, pruning_min=6, dynamic_threshold=False, threshold_warmup=10, last_n_threshold=5, kb_embeddings=True, experiment_hash='vJUDd', batch_size=5)\n"
+      "Running experiment: CoherenceExperiment(num_samples=16, start=100, dataset_type='city', model_string='bert-base-uncased', max_words_per_step=3, same_word_multiplier=2, no_same_word_penalty=2, prediction_threshold=0.5, coherence_threshold=0.2, coherence_dump_on_prediction=False, pruning=1, pruning_min=6, dynamic_threshold=False, threshold_warmup=10, last_n_threshold=5, kb_embeddings=True, experiment_hash='sPPpo', batch_size=5)\n"
      ]
     },
     {
@@ -294,27 +294,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 : 5\n",
-      "..15 : 10\n",
-      "...210 : 15\n",
-      "...3predictions complete...\n",
-      "9\n",
-      "15\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Segmentations have unequal length",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [124], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#TODO: something wrong with the batching - FIX!!\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m experimentation\u001b[38;5;241m.\u001b[39mrun()\n",
-      "File \u001b[0;32m~/Documents/PhD/HumanMachineLab/Coherence/src/experimentation/coherence_v2.py:238\u001b[0m, in \u001b[0;36mSimpleExperiment.run\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    219\u001b[0m coherence \u001b[38;5;241m=\u001b[39m Coherence(\n\u001b[1;32m    220\u001b[0m     max_words_per_step\u001b[38;5;241m=\u001b[39mexperiment\u001b[38;5;241m.\u001b[39mmax_words_per_step,\n\u001b[1;32m    221\u001b[0m     same_word_multiplier\u001b[38;5;241m=\u001b[39mexperiment\u001b[38;5;241m.\u001b[39msame_word_multiplier,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    225\u001b[0m     kb_embeddings\u001b[38;5;241m=\u001b[39mexperiment\u001b[38;5;241m.\u001b[39mkb_embeddings,\n\u001b[1;32m    226\u001b[0m )\n\u001b[1;32m    228\u001b[0m logits \u001b[38;5;241m=\u001b[39m coherence\u001b[38;5;241m.\u001b[39mpredict(\n\u001b[1;32m    229\u001b[0m     text_data\u001b[38;5;241m=\u001b[39mbatch_segments_to_test,\n\u001b[1;32m    230\u001b[0m     max_tokens\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m128\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    235\u001b[0m     batch_size\u001b[38;5;241m=\u001b[39mexperiment\u001b[38;5;241m.\u001b[39mbatch_size,\n\u001b[1;32m    236\u001b[0m )\n\u001b[0;32m--> 238\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlog_predictions\u001b[49m\u001b[43m(\u001b[49m\u001b[43mexperiment\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlogits\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_labels_to_test\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    240\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mExperiment \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m complete.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    241\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m==============================================\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/Documents/PhD/HumanMachineLab/Coherence/src/experimentation/coherence_v2.py:102\u001b[0m, in \u001b[0;36mSimpleExperiment.log_predictions\u001b[0;34m(self, experiment, predictions, true_labels)\u001b[0m\n\u001b[1;32m     99\u001b[0m \u001b[38;5;66;03m# append data frame to CSV file\u001b[39;00m\n\u001b[1;32m    100\u001b[0m df\u001b[38;5;241m.\u001b[39mto_csv(predictions_path, mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m\"\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, header\u001b[38;5;241m=\u001b[39mhdr)\n\u001b[0;32m--> 102\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlog_evaluations\u001b[49m\u001b[43m(\u001b[49m\u001b[43mexperiment\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpredictions\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrue_labels\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Documents/PhD/HumanMachineLab/Coherence/src/experimentation/coherence_v2.py:138\u001b[0m, in \u001b[0;36mSimpleExperiment.log_evaluations\u001b[0;34m(self, experiment, predictions, true_labels)\u001b[0m\n\u001b[1;32m    135\u001b[0m true_string \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;28mstr\u001b[39m(true_labels))\n\u001b[1;32m    137\u001b[0m \u001b[38;5;66;03m# calculate all the metrics we will be storing\u001b[39;00m\n\u001b[0;32m--> 138\u001b[0m wd_score \u001b[38;5;241m=\u001b[39m \u001b[43mwindowdiff\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpred_string\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrue_string\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mavg_k\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    139\u001b[0m pk_score \u001b[38;5;241m=\u001b[39m pk(pred_string, true_string, avg_k)\n\u001b[1;32m    140\u001b[0m tn, fp, fn, tp \u001b[38;5;241m=\u001b[39m confusion_matrix(true_labels, modified_predictions)\u001b[38;5;241m.\u001b[39mravel()\n",
-      "File \u001b[0;32m~/Documents/PhD/HumanMachineLab/Coherence/utils/metrics.py:80\u001b[0m, in \u001b[0;36mwindowdiff\u001b[0;34m(seg1, seg2, k, boundary, weighted)\u001b[0m\n\u001b[1;32m     50\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     51\u001b[0m \u001b[38;5;124;03mCompute the windowdiff score for a pair of segmentations.  A\u001b[39;00m\n\u001b[1;32m     52\u001b[0m \u001b[38;5;124;03msegmentation is any sequence over a vocabulary of two items\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     76\u001b[0m \u001b[38;5;124;03m:rtype: float\u001b[39;00m\n\u001b[1;32m     77\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     79\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(seg1) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mlen\u001b[39m(seg2):\n\u001b[0;32m---> 80\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSegmentations have unequal length\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     81\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m k \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mlen\u001b[39m(seg1):\n\u001b[1;32m     82\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m     83\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWindow width k should be smaller or equal than segmentation lengths\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     84\u001b[0m     )\n",
-      "\u001b[0;31mValueError\u001b[0m: Segmentations have unequal length"
+      " 0 : 5\n",
+      "5\n",
+      "5\n",
+      "....1 5 : 10\n",
+      "5\n",
+      "5\n",
+      ".....2 10 : 15\n",
+      "5\n",
+      "5\n",
+      ".....3predictions complete...\n",
+      "15\n",
+      "15\n",
+      "pk score: 0.23076923076923078\n",
+      "wd score: 0.23076923076923078\n",
+      "\n",
+      "Experiment 1 complete.\n",
+      "==============================================\n",
+      "\n"
      ]
     },
     {
@@ -322,8 +319,8 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 124;\n",
-       "                var nbb_unformatted_code = \"#TODO: something wrong with the batching - FIX!!\\n\\nexperimentation.run()\";\n",
+       "                var nbb_cell_id = 132;\n",
+       "                var nbb_unformatted_code = \"# TODO: something wrong with the batching - FIX!!\\n\\nexperimentation.run()\";\n",
        "                var nbb_formatted_code = \"# TODO: something wrong with the batching - FIX!!\\n\\nexperimentation.run()\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
        "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
@@ -354,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1a9f0437",
+   "id": "f953e189",
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "5cd660e9",
+   "id": "85fc7e10",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a121e4e",
+   "id": "c1eff149",
    "metadata": {},
    "outputs": [],
    "source": []
