--- a/notebooks/1.6-batch-coherence.ipynb
+++ b/notebooks/1.6-batch-coherence.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 150,
    "id": "8b71ba8b",
    "metadata": {},
    "outputs": [
@@ -217,9 +217,9 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 131;\n",
-       "                var nbb_unformatted_code = \"experimentation = SimpleExperiment()\\n\\nexperimentation.queue_experiment(\\n    CoherenceExperiment(\\n        dataset_type=\\\"city\\\",\\n        model_string=\\\"bert-base-uncased\\\",\\n        max_words_per_step=3,\\n        start=100,\\n        num_samples=16,\\n        same_word_multiplier=2,\\n        no_same_word_penalty=2,\\n        kb_embeddings=True,\\n        coherence_dump_on_prediction=False,\\n        coherence_threshold=0.2,\\n        prediction_threshold=0.5,\\n        pruning=1,\\n        pruning_min=6,\\n        batch_size=5,\\n    )\\n)\";\n",
-       "                var nbb_formatted_code = \"experimentation = SimpleExperiment()\\n\\nexperimentation.queue_experiment(\\n    CoherenceExperiment(\\n        dataset_type=\\\"city\\\",\\n        model_string=\\\"bert-base-uncased\\\",\\n        max_words_per_step=3,\\n        start=100,\\n        num_samples=16,\\n        same_word_multiplier=2,\\n        no_same_word_penalty=2,\\n        kb_embeddings=True,\\n        coherence_dump_on_prediction=False,\\n        coherence_threshold=0.2,\\n        prediction_threshold=0.5,\\n        pruning=1,\\n        pruning_min=6,\\n        batch_size=5,\\n    )\\n)\";\n",
+       "                var nbb_cell_id = 150;\n",
+       "                var nbb_unformatted_code = \"experimentation = SimpleExperiment()\\n\\nexperimentation.queue_experiment(\\n    CoherenceExperiment(\\n        dataset_type=\\\"city\\\",\\n        model_string=\\\"bert-base-uncased\\\",\\n        max_words_per_step=3,\\n        start=100,\\n        num_samples=250,\\n        same_word_multiplier=1,\\n        no_same_word_penalty=1,\\n        kb_embeddings=True,\\n        coherence_dump_on_prediction=True,\\n        coherence_threshold=0.3,\\n        prediction_threshold=0.47,\\n        pruning=0,\\n        pruning_min=0,\\n        batch_size=10,\\n    )\\n)\";\n",
+       "                var nbb_formatted_code = \"experimentation = SimpleExperiment()\\n\\nexperimentation.queue_experiment(\\n    CoherenceExperiment(\\n        dataset_type=\\\"city\\\",\\n        model_string=\\\"bert-base-uncased\\\",\\n        max_words_per_step=3,\\n        start=100,\\n        num_samples=250,\\n        same_word_multiplier=1,\\n        no_same_word_penalty=1,\\n        kb_embeddings=True,\\n        coherence_dump_on_prediction=True,\\n        coherence_threshold=0.3,\\n        prediction_threshold=0.47,\\n        pruning=0,\\n        pruning_min=0,\\n        batch_size=10,\\n    )\\n)\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
        "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
        "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
@@ -249,23 +249,25 @@
     "        model_string=\"bert-base-uncased\",\n",
     "        max_words_per_step=3,\n",
     "        start=100,\n",
-    "        num_samples=16,\n",
+    "        num_samples=250,\n",
     "        same_word_multiplier=2,\n",
     "        no_same_word_penalty=2,\n",
     "        kb_embeddings=True,\n",
-    "        coherence_dump_on_prediction=False,\n",
-    "        coherence_threshold=0.2,\n",
-    "        prediction_threshold=0.5,\n",
-    "        pruning=1,\n",
-    "        pruning_min=6,\n",
-    "        batch_size=5,\n",
+    "        coherence_dump_on_prediction=True,\n",
+    "        coherence_threshold=0.3,\n",
+    "        prediction_threshold=0.47,\n",
+    "        pruning=0,\n",
+    "        pruning_min=0,\n",
+    "        batch_size=10,\n",
+    "        print_metrics_summary=True,\n",
+    "        print_predictions_summary=True,\n",
     "    )\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 151,
    "id": "b57a9097",
    "metadata": {},
    "outputs": [
@@ -273,8 +275,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running experiment set: bNFEu\n",
-      "Running experiment: CoherenceExperiment(num_samples=16, start=100, dataset_type='city', model_string='bert-base-uncased', max_words_per_step=3, same_word_multiplier=2, no_same_word_penalty=2, prediction_threshold=0.5, coherence_threshold=0.2, coherence_dump_on_prediction=False, pruning=1, pruning_min=6, dynamic_threshold=False, threshold_warmup=10, last_n_threshold=5, kb_embeddings=True, experiment_hash='sPPpo', batch_size=5)\n"
+      "Running experiment set: eIpdb\n",
+      "Running experiment: CoherenceExperiment(num_samples=250, start=100, dataset_type='city', model_string='bert-base-uncased', max_words_per_step=3, same_word_multiplier=1, no_same_word_penalty=1, prediction_threshold=0.47, coherence_threshold=0.3, coherence_dump_on_prediction=True, pruning=0, pruning_min=0, dynamic_threshold=False, threshold_warmup=10, last_n_threshold=5, kb_embeddings=True, experiment_hash='RPE3I', batch_size=10)\n"
      ]
     },
     {
@@ -294,22 +296,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 0 : 5\n",
-      "5\n",
-      "5\n",
-      "....1 5 : 10\n",
-      "5\n",
-      "5\n",
-      ".....2 10 : 15\n",
-      "5\n",
-      "5\n",
-      ".....3predictions complete...\n",
-      "15\n",
-      "15\n",
-      "pk score: 0.23076923076923078\n",
-      "wd score: 0.23076923076923078\n",
+      ".........1..........2..........3..........4..........5..........6..........7..........8..........9..........10..........11..........12..........13..........14..........15..........16..........17..........18..........19..........20..........21..........22..........23..........24..........25prediction threshold: 0.45\n",
+      "pk score: 0.2667560321715818\n",
+      "wd score: 0.2667560321715818\n",
+      "prediction threshold: 0.46\n",
+      "pk score: 0.26005361930294907\n",
+      "wd score: 0.26005361930294907\n",
+      "prediction threshold: 0.47\n",
+      "pk score: 0.23994638069705093\n",
+      "wd score: 0.24262734584450402\n",
+      "prediction threshold: 0.48\n",
+      "pk score: 0.21983914209115282\n",
+      "wd score: 0.225201072386059\n",
+      "prediction threshold: 0.49\n",
+      "pk score: 0.2225201072386059\n",
+      "wd score: 0.23324396782841822\n",
+      "prediction threshold: 0.5\n",
+      "pk score: 0.23726541554959785\n",
+      "wd score: 0.2479892761394102\n",
+      "prediction threshold: 0.51\n",
+      "pk score: 0.2587131367292225\n",
+      "wd score: 0.2801608579088472\n",
+      "prediction threshold: 0.52\n",
+      "pk score: 0.2734584450402145\n",
+      "wd score: 0.30294906166219837\n",
+      "prediction threshold: 0.53\n",
+      "pk score: 0.3109919571045576\n",
+      "wd score: 0.353887399463807\n",
+      "prediction threshold: 0.54\n",
+      "pk score: 0.34986595174262736\n",
+      "wd score: 0.4168900804289544\n",
+      "prediction threshold: 0.55\n",
+      "pk score: 0.3726541554959786\n",
+      "wd score: 0.4450402144772118\n",
       "\n",
-      "Experiment 1 complete.\n",
+      "Experiment 1 - RPE3I complete.\n",
       "==============================================\n",
       "\n"
      ]
@@ -319,7 +340,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 132;\n",
+       "                var nbb_cell_id = 151;\n",
        "                var nbb_unformatted_code = \"# TODO: something wrong with the batching - FIX!!\\n\\nexperimentation.run()\";\n",
        "                var nbb_formatted_code = \"# TODO: something wrong with the batching - FIX!!\\n\\nexperimentation.run()\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -351,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f953e189",
+   "id": "fda367d2",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "85fc7e10",
+   "id": "617fbfbf",
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1eff149",
+   "id": "674c138c",
    "metadata": {},
    "outputs": [],
    "source": []
