WIP: fix coherence map

--- a/notebooks/1.6-batch-coherence.ipynb
+++ b/notebooks/1.6-batch-coherence.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 186,
    "id": "8b71ba8b",
    "metadata": {},
    "outputs": [
@@ -217,9 +217,9 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 182;\n",
-       "                var nbb_unformatted_code = \"experimentation = SimpleExperiment()\\n\\nexperimentation.queue_experiment(\\n    CoherenceExperiment(\\n        dataset_type=\\\"city\\\",\\n        model_string=\\\"bert-base-uncased\\\",\\n        max_words_per_step=4,\\n        start=100,\\n        num_samples=300,\\n        same_word_multiplier=1,\\n        no_same_word_penalty=1,\\n        kb_embeddings=True,\\n        coherence_dump_on_prediction=False,\\n        coherence_threshold=0.2,\\n        prediction_threshold=0.47,\\n        pruning=1,\\n        pruning_min=6,\\n        batch_size=10,\\n        print_metrics_summary=True,\\n        print_predictions_summary=True,\\n        keyword_diversity=0.3,\\n    )\\n)\";\n",
-       "                var nbb_formatted_code = \"experimentation = SimpleExperiment()\\n\\nexperimentation.queue_experiment(\\n    CoherenceExperiment(\\n        dataset_type=\\\"city\\\",\\n        model_string=\\\"bert-base-uncased\\\",\\n        max_words_per_step=4,\\n        start=100,\\n        num_samples=300,\\n        same_word_multiplier=1,\\n        no_same_word_penalty=1,\\n        kb_embeddings=True,\\n        coherence_dump_on_prediction=False,\\n        coherence_threshold=0.2,\\n        prediction_threshold=0.47,\\n        pruning=1,\\n        pruning_min=6,\\n        batch_size=10,\\n        print_metrics_summary=True,\\n        print_predictions_summary=True,\\n        keyword_diversity=0.3,\\n    )\\n)\";\n",
+       "                var nbb_cell_id = 186;\n",
+       "                var nbb_unformatted_code = \"experimentation = SimpleExperiment()\\n\\nexperimentation.queue_experiment(\\n    CoherenceExperiment(\\n        dataset_type=\\\"city\\\",\\n        model_string=\\\"bert-base-uncased\\\",\\n        max_words_per_step=4,\\n        start=100,\\n        num_samples=200,\\n        same_word_multiplier=1,\\n        no_same_word_penalty=1,\\n        kb_embeddings=True,\\n        coherence_dump_on_prediction=False,\\n        coherence_threshold=0.2,\\n        prediction_threshold=0.47,\\n        pruning=1,\\n        pruning_min=6,\\n        batch_size=10,\\n        print_metrics_summary=True,\\n        print_predictions_summary=True,\\n        keyword_diversity=0.4,\\n    )\\n)\";\n",
+       "                var nbb_formatted_code = \"experimentation = SimpleExperiment()\\n\\nexperimentation.queue_experiment(\\n    CoherenceExperiment(\\n        dataset_type=\\\"city\\\",\\n        model_string=\\\"bert-base-uncased\\\",\\n        max_words_per_step=4,\\n        start=100,\\n        num_samples=200,\\n        same_word_multiplier=1,\\n        no_same_word_penalty=1,\\n        kb_embeddings=True,\\n        coherence_dump_on_prediction=False,\\n        coherence_threshold=0.2,\\n        prediction_threshold=0.47,\\n        pruning=1,\\n        pruning_min=6,\\n        batch_size=10,\\n        print_metrics_summary=True,\\n        print_predictions_summary=True,\\n        keyword_diversity=0.4,\\n    )\\n)\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
        "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
        "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
@@ -249,7 +249,7 @@
     "        model_string=\"bert-base-uncased\",\n",
     "        max_words_per_step=4,\n",
     "        start=100,\n",
-    "        num_samples=300,\n",
+    "        num_samples=200,\n",
     "        same_word_multiplier=1,\n",
     "        no_same_word_penalty=1,\n",
     "        kb_embeddings=True,\n",
@@ -261,14 +261,14 @@
     "        batch_size=10,\n",
     "        print_metrics_summary=True,\n",
     "        print_predictions_summary=True,\n",
-    "        keyword_diversity=0.3,\n",
+    "        keyword_diversity=0.4,\n",
     "    )\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 187,
    "id": "b57a9097",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
      "output_type": "stream",
      "text": [
       "Running experiment set: PWrLn\n",
-      "Running experiment: CoherenceExperiment(num_samples=300, start=100, dataset_type='city', model_string='bert-base-uncased', max_words_per_step=4, same_word_multiplier=1, no_same_word_penalty=1, prediction_threshold=0.47, coherence_threshold=0.2, coherence_dump_on_prediction=False, pruning=1, pruning_min=6, dynamic_threshold=False, threshold_warmup=10, last_n_threshold=5, kb_embeddings=True, experiment_hash='jPjcy', batch_size=10, keyword_diversity=0.3, print_metrics_summary=True, print_predictions_summary=True)\n"
+      "Running experiment: CoherenceExperiment(num_samples=200, start=100, dataset_type='city', model_string='bert-base-uncased', max_words_per_step=4, same_word_multiplier=1, no_same_word_penalty=1, prediction_threshold=0.47, coherence_threshold=0.2, coherence_dump_on_prediction=False, pruning=1, pruning_min=6, dynamic_threshold=False, threshold_warmup=10, last_n_threshold=5, kb_embeddings=True, experiment_hash='BTRbj', batch_size=10, keyword_diversity=0.4, print_metrics_summary=True, print_predictions_summary=True)\n"
      ]
     },
     {
@@ -297,8 +297,128 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".........1..........2..........3..........4..........5..........6..........7..........8..........9..........10..........11..........12..........13..........14..........15..........16..........17..........18..........19..........20..........21."
+      ".........1..........2..........3..........4..........5..........6..........7..........8..........9..........10..........11..........12..........13..........14..........15..........16..........17..........18..........19..........20\n",
+      "============= Metrics Summary =============\n",
+      "prediction threshold: 0.4\n",
+      "pk score: 0.2701342281879195\n",
+      "wd score: 0.2701342281879195\n",
+      "==========================\n",
+      "prediction threshold: 0.41\n",
+      "pk score: 0.2701342281879195\n",
+      "wd score: 0.2701342281879195\n",
+      "==========================\n",
+      "prediction threshold: 0.42\n",
+      "pk score: 0.2701342281879195\n",
+      "wd score: 0.2701342281879195\n",
+      "==========================\n",
+      "prediction threshold: 0.43\n",
+      "pk score: 0.2701342281879195\n",
+      "wd score: 0.2701342281879195\n",
+      "==========================\n",
+      "prediction threshold: 0.44\n",
+      "pk score: 0.2701342281879195\n",
+      "wd score: 0.2701342281879195\n",
+      "==========================\n",
+      "prediction threshold: 0.45\n",
+      "pk score: 0.2634228187919463\n",
+      "wd score: 0.2634228187919463\n",
+      "==========================\n",
+      "prediction threshold: 0.46\n",
+      "pk score: 0.25\n",
+      "wd score: 0.2533557046979866\n",
+      "==========================\n",
+      "prediction threshold: 0.47\n",
+      "pk score: 0.2332214765100671\n",
+      "wd score: 0.24328859060402686\n",
+      "==========================\n",
+      "prediction threshold: 0.48\n",
+      "pk score: 0.24161073825503357\n",
+      "wd score: 0.2516778523489933\n",
+      "==========================\n",
+      "prediction threshold: 0.49\n",
+      "pk score: 0.22651006711409397\n",
+      "wd score: 0.23993288590604026\n",
+      "==========================\n",
+      "prediction threshold: 0.5\n",
+      "pk score: 0.24664429530201343\n",
+      "wd score: 0.2701342281879195\n",
+      "==========================\n",
+      "prediction threshold: 0.51\n",
+      "pk score: 0.29697986577181207\n",
+      "wd score: 0.3238255033557047\n",
+      "==========================\n",
+      "prediction threshold: 0.52\n",
+      "pk score: 0.33053691275167785\n",
+      "wd score: 0.36073825503355705\n",
+      "==========================\n",
+      "prediction threshold: 0.53\n",
+      "pk score: 0.37583892617449666\n",
+      "wd score: 0.4161073825503356\n",
+      "==========================\n",
+      "prediction threshold: 0.54\n",
+      "pk score: 0.44798657718120805\n",
+      "wd score: 0.5050335570469798\n",
+      "==========================\n",
+      "prediction threshold: 0.55\n",
+      "pk score: 0.49161073825503354\n",
+      "wd score: 0.5620805369127517\n",
+      "==========================\n",
+      "prediction threshold: 0.56\n",
+      "pk score: 0.5151006711409396\n",
+      "wd score: 0.6090604026845637\n",
+      "==========================\n",
+      "prediction threshold: 0.57\n",
+      "pk score: 0.535234899328859\n",
+      "wd score: 0.639261744966443\n",
+      "==========================\n",
+      "prediction threshold: 0.58\n",
+      "pk score: 0.552013422818792\n",
+      "wd score: 0.6795302013422819\n",
+      "==========================\n",
+      "prediction threshold: 0.59\n",
+      "pk score: 0.5704697986577181\n",
+      "wd score: 0.7114093959731543\n",
+      "==========================\n",
+      "prediction threshold: 0.6\n",
+      "pk score: 0.6057046979865772\n",
+      "wd score: 0.7533557046979866\n",
+      "==========================\n",
+      "============= Predictions Summary =============\n",
+      "best pk: 0.22651006711409397, best prediction threshold: 0.49\n",
+      "P:[1, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
+      "R:[0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
+      "\n",
+      "Experiment 1 - BTRbj complete.\n",
+      "==============================================\n",
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "            setTimeout(function() {\n",
+       "                var nbb_cell_id = 187;\n",
+       "                var nbb_unformatted_code = \"experimentation.run()\";\n",
+       "                var nbb_formatted_code = \"experimentation.run()\";\n",
+       "                var nbb_cells = Jupyter.notebook.get_cells();\n",
+       "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
+       "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
+       "                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n",
+       "                             nbb_cells[i].set_text(nbb_formatted_code);\n",
+       "                        }\n",
+       "                        break;\n",
+       "                    }\n",
+       "                }\n",
+       "            }, 500);\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -308,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6a15889",
+   "id": "7d69d9ff",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -316,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f99388b6",
+   "id": "b3adaff9",
    "metadata": {},
    "outputs": [],
    "source": []
