--- a/notebooks/1.6-batch-coherence.ipynb
+++ b/notebooks/1.6-batch-coherence.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 106,
    "id": "8b71ba8b",
    "metadata": {},
    "outputs": [
@@ -127,9 +127,9 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 98;\n",
-       "                var nbb_unformatted_code = \"experimentation = SimpleExperiment()\\n\\nexperimentation.queue_experiment(\\n    CoherenceExperiment(\\n        dataset_type=\\\"city\\\",\\n        #         model_string=\\\"bert-base-uncased\\\",\\n        model_string=\\\"sentence-transformers/all-MiniLM-L6-v2\\\",\\n        #         model_string=\\\"sentence-transformers/LaBSE\\\",\\n        max_words_per_step=4,\\n        start=100,\\n        num_samples=25,\\n        same_word_multiplier=1,\\n        no_same_word_penalty=1,\\n        kb_embeddings=True,\\n        coherence_dump_on_prediction=False,\\n        coherence_threshold=0.2,\\n        prediction_threshold=0.47,\\n        pruning=1,\\n        pruning_min=7,\\n        batch_size=7,\\n        print_metrics_summary=True,\\n        print_predictions_summary=True,\\n        keyword_diversity=0.2,\\n    )\\n)\";\n",
-       "                var nbb_formatted_code = \"experimentation = SimpleExperiment()\\n\\nexperimentation.queue_experiment(\\n    CoherenceExperiment(\\n        dataset_type=\\\"city\\\",\\n        #         model_string=\\\"bert-base-uncased\\\",\\n        model_string=\\\"sentence-transformers/all-MiniLM-L6-v2\\\",\\n        #         model_string=\\\"sentence-transformers/LaBSE\\\",\\n        max_words_per_step=4,\\n        start=100,\\n        num_samples=25,\\n        same_word_multiplier=1,\\n        no_same_word_penalty=1,\\n        kb_embeddings=True,\\n        coherence_dump_on_prediction=False,\\n        coherence_threshold=0.2,\\n        prediction_threshold=0.47,\\n        pruning=1,\\n        pruning_min=7,\\n        batch_size=7,\\n        print_metrics_summary=True,\\n        print_predictions_summary=True,\\n        keyword_diversity=0.2,\\n    )\\n)\";\n",
+       "                var nbb_cell_id = 106;\n",
+       "                var nbb_unformatted_code = \"experimentation = SimpleExperiment()\\n\\nexperimentation.queue_experiment(\\n    CoherenceExperiment(\\n        dataset_type=\\\"city\\\",\\n        #         model_string=\\\"bert-base-uncased\\\",\\n        model_string=\\\"sentence-transformers/all-MiniLM-L6-v2\\\",\\n        #         model_string=\\\"sentence-transformers/LaBSE\\\",\\n        max_words_per_step=4,\\n        start=100,\\n        num_samples=20,\\n        same_word_multiplier=1,\\n        no_same_word_penalty=1,\\n        kb_embeddings=True,\\n        coherence_dump_on_prediction=False,\\n        coherence_threshold=0.2,\\n        prediction_threshold=0.47,\\n        pruning=1,\\n        pruning_min=7,\\n        batch_size=20,\\n        print_metrics_summary=True,\\n        print_predictions_summary=True,\\n        keyword_diversity=0.2,\\n    )\\n)\";\n",
+       "                var nbb_formatted_code = \"experimentation = SimpleExperiment()\\n\\nexperimentation.queue_experiment(\\n    CoherenceExperiment(\\n        dataset_type=\\\"city\\\",\\n        #         model_string=\\\"bert-base-uncased\\\",\\n        model_string=\\\"sentence-transformers/all-MiniLM-L6-v2\\\",\\n        #         model_string=\\\"sentence-transformers/LaBSE\\\",\\n        max_words_per_step=4,\\n        start=100,\\n        num_samples=20,\\n        same_word_multiplier=1,\\n        no_same_word_penalty=1,\\n        kb_embeddings=True,\\n        coherence_dump_on_prediction=False,\\n        coherence_threshold=0.2,\\n        prediction_threshold=0.47,\\n        pruning=1,\\n        pruning_min=7,\\n        batch_size=20,\\n        print_metrics_summary=True,\\n        print_predictions_summary=True,\\n        keyword_diversity=0.2,\\n    )\\n)\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
        "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
        "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
@@ -161,7 +161,7 @@
     "        #         model_string=\"sentence-transformers/LaBSE\",\n",
     "        max_words_per_step=4,\n",
     "        start=100,\n",
-    "        num_samples=25,\n",
+    "        num_samples=20,\n",
     "        same_word_multiplier=1,\n",
     "        no_same_word_penalty=1,\n",
     "        kb_embeddings=True,\n",
@@ -170,7 +170,7 @@
     "        prediction_threshold=0.47,\n",
     "        pruning=1,\n",
     "        pruning_min=7,\n",
-    "        batch_size=7,\n",
+    "        batch_size=20,\n",
     "        print_metrics_summary=True,\n",
     "        print_predictions_summary=True,\n",
     "        keyword_diversity=0.2,\n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 107,
    "id": "b57a9097",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
      "output_type": "stream",
      "text": [
       "Running experiment set: Wcsdv\n",
-      "Running experiment: CoherenceExperiment(num_samples=25, start=100, dataset_type='city', model_string='sentence-transformers/all-MiniLM-L6-v2', max_words_per_step=4, same_word_multiplier=1, no_same_word_penalty=1, prediction_threshold=0.47, coherence_threshold=0.2, coherence_dump_on_prediction=False, pruning=1, pruning_min=7, dynamic_threshold=False, threshold_warmup=10, last_n_threshold=5, kb_embeddings=True, experiment_hash='VmeEg', batch_size=7, keyword_diversity=0.2, print_metrics_summary=True, print_predictions_summary=True)\n"
+      "Running experiment: CoherenceExperiment(num_samples=20, start=100, dataset_type='city', model_string='sentence-transformers/all-MiniLM-L6-v2', max_words_per_step=4, same_word_multiplier=1, no_same_word_penalty=1, prediction_threshold=0.47, coherence_threshold=0.2, coherence_dump_on_prediction=False, pruning=1, pruning_min=7, dynamic_threshold=False, threshold_warmup=10, last_n_threshold=5, kb_embeddings=True, experiment_hash='P7iYl', batch_size=20, keyword_diversity=0.2, print_metrics_summary=True, print_predictions_summary=True)\n"
      ]
     },
     {
@@ -206,119 +206,121 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "...... - CM Length: [4, 4, 4, 4, 4, 4] 1....... - CM Length: [4, 4, 4, 4, 4, 4] 2....... - CM Length: [4, 4, 4, 4, 4, 4] 3\n",
+      "TOTAL BATCHES: 1\n",
+      "\n",
+      "................... BATCH 1 \n",
       "============= Metrics Summary =============\n",
       "prediction threshold: 0.4\n",
-      "pk score: 0.2033898305084746\n",
-      "wd score: 0.2033898305084746\n",
-      "confusion: f1-0.8095238095238095, tp-0, fp-1, tn-17, fn-3\n",
+      "pk score: 0.18181818181818182\n",
+      "wd score: 0.18181818181818182\n",
+      "confusion: f1-0.85, tp-0, fp-1, tn-17, fn-2\n",
       "==========================\n",
       "prediction threshold: 0.41\n",
-      "pk score: 0.2033898305084746\n",
-      "wd score: 0.2033898305084746\n",
-      "confusion: f1-0.8095238095238095, tp-0, fp-1, tn-17, fn-3\n",
+      "pk score: 0.18181818181818182\n",
+      "wd score: 0.18181818181818182\n",
+      "confusion: f1-0.85, tp-0, fp-1, tn-17, fn-2\n",
       "==========================\n",
       "prediction threshold: 0.42\n",
-      "pk score: 0.2033898305084746\n",
-      "wd score: 0.2033898305084746\n",
-      "confusion: f1-0.8095238095238095, tp-0, fp-1, tn-17, fn-3\n",
+      "pk score: 0.18181818181818182\n",
+      "wd score: 0.18181818181818182\n",
+      "confusion: f1-0.85, tp-0, fp-1, tn-17, fn-2\n",
       "==========================\n",
       "prediction threshold: 0.43\n",
-      "pk score: 0.2033898305084746\n",
-      "wd score: 0.2033898305084746\n",
-      "confusion: f1-0.8095238095238095, tp-0, fp-1, tn-17, fn-3\n",
+      "pk score: 0.18181818181818182\n",
+      "wd score: 0.18181818181818182\n",
+      "confusion: f1-0.85, tp-0, fp-1, tn-17, fn-2\n",
       "==========================\n",
       "prediction threshold: 0.44\n",
-      "pk score: 0.22033898305084745\n",
-      "wd score: 0.22033898305084745\n",
-      "confusion: f1-0.7619047619047619, tp-0, fp-2, tn-16, fn-3\n",
+      "pk score: 0.18181818181818182\n",
+      "wd score: 0.18181818181818182\n",
+      "confusion: f1-0.8000000000000002, tp-0, fp-2, tn-16, fn-2\n",
       "==========================\n",
       "prediction threshold: 0.45\n",
-      "pk score: 0.1694915254237288\n",
-      "wd score: 0.2033898305084746\n",
-      "confusion: f1-0.8095238095238095, tp-1, fp-2, tn-16, fn-2\n",
+      "pk score: 0.12727272727272726\n",
+      "wd score: 0.18181818181818182\n",
+      "confusion: f1-0.85, tp-1, fp-2, tn-16, fn-1\n",
       "==========================\n",
       "prediction threshold: 0.46\n",
-      "pk score: 0.0847457627118644\n",
-      "wd score: 0.15254237288135594\n",
-      "confusion: f1-0.8571428571428571, tp-2, fp-2, tn-16, fn-1\n",
+      "pk score: 0.09090909090909091\n",
+      "wd score: 0.14545454545454545\n",
+      "confusion: f1-0.9, tp-2, fp-2, tn-16, fn-0\n",
       "==========================\n",
       "prediction threshold: 0.47\n",
-      "pk score: 0.0847457627118644\n",
-      "wd score: 0.15254237288135594\n",
-      "confusion: f1-0.8571428571428571, tp-2, fp-2, tn-16, fn-1\n",
+      "pk score: 0.09090909090909091\n",
+      "wd score: 0.14545454545454545\n",
+      "confusion: f1-0.9, tp-2, fp-2, tn-16, fn-0\n",
       "==========================\n",
       "prediction threshold: 0.48\n",
-      "pk score: 0.13559322033898305\n",
-      "wd score: 0.23728813559322035\n",
-      "confusion: f1-0.8095238095238095, tp-2, fp-3, tn-15, fn-1\n",
+      "pk score: 0.14545454545454545\n",
+      "wd score: 0.23636363636363636\n",
+      "confusion: f1-0.85, tp-2, fp-3, tn-15, fn-0\n",
       "==========================\n",
       "prediction threshold: 0.49\n",
-      "pk score: 0.2711864406779661\n",
-      "wd score: 0.3728813559322034\n",
-      "confusion: f1-0.7142857142857143, tp-2, fp-5, tn-13, fn-1\n",
+      "pk score: 0.3090909090909091\n",
+      "wd score: 0.4\n",
+      "confusion: f1-0.75, tp-2, fp-5, tn-13, fn-0\n",
       "==========================\n",
       "prediction threshold: 0.5\n",
-      "pk score: 0.3728813559322034\n",
-      "wd score: 0.4745762711864407\n",
-      "confusion: f1-0.6190476190476191, tp-2, fp-7, tn-11, fn-1\n",
+      "pk score: 0.41818181818181815\n",
+      "wd score: 0.509090909090909\n",
+      "confusion: f1-0.65, tp-2, fp-7, tn-11, fn-0\n",
       "==========================\n",
       "prediction threshold: 0.51\n",
-      "pk score: 0.4576271186440678\n",
-      "wd score: 0.5254237288135594\n",
-      "confusion: f1-0.6190476190476191, tp-3, fp-8, tn-10, fn-0\n",
+      "pk score: 0.5272727272727272\n",
+      "wd score: 0.6181818181818182\n",
+      "confusion: f1-0.6, tp-2, fp-8, tn-10, fn-0\n",
       "==========================\n",
       "prediction threshold: 0.52\n",
-      "pk score: 0.6610169491525424\n",
-      "wd score: 0.7288135593220338\n",
-      "confusion: f1-0.42857142857142855, tp-3, fp-12, tn-6, fn-0\n",
+      "pk score: 0.7454545454545455\n",
+      "wd score: 0.8363636363636363\n",
+      "confusion: f1-0.4000000000000001, tp-2, fp-12, tn-6, fn-0\n",
       "==========================\n",
       "prediction threshold: 0.53\n",
-      "pk score: 0.6779661016949152\n",
-      "wd score: 0.7457627118644068\n",
-      "confusion: f1-0.38095238095238093, tp-3, fp-13, tn-5, fn-0\n",
+      "pk score: 0.7454545454545455\n",
+      "wd score: 0.8363636363636363\n",
+      "confusion: f1-0.35, tp-2, fp-13, tn-5, fn-0\n",
       "==========================\n",
       "prediction threshold: 0.54\n",
-      "pk score: 0.6779661016949152\n",
-      "wd score: 0.7457627118644068\n",
-      "confusion: f1-0.38095238095238093, tp-3, fp-13, tn-5, fn-0\n",
+      "pk score: 0.7454545454545455\n",
+      "wd score: 0.8363636363636363\n",
+      "confusion: f1-0.35, tp-2, fp-13, tn-5, fn-0\n",
       "==========================\n",
       "prediction threshold: 0.55\n",
-      "pk score: 0.711864406779661\n",
-      "wd score: 0.7796610169491526\n",
-      "confusion: f1-0.2857142857142857, tp-3, fp-15, tn-3, fn-0\n",
+      "pk score: 0.7454545454545455\n",
+      "wd score: 0.8363636363636363\n",
+      "confusion: f1-0.25, tp-2, fp-15, tn-3, fn-0\n",
       "==========================\n",
       "prediction threshold: 0.56\n",
-      "pk score: 0.711864406779661\n",
-      "wd score: 0.7796610169491526\n",
-      "confusion: f1-0.2857142857142857, tp-3, fp-15, tn-3, fn-0\n",
+      "pk score: 0.7454545454545455\n",
+      "wd score: 0.8363636363636363\n",
+      "confusion: f1-0.25, tp-2, fp-15, tn-3, fn-0\n",
       "==========================\n",
       "prediction threshold: 0.57\n",
-      "pk score: 0.711864406779661\n",
-      "wd score: 0.7796610169491526\n",
-      "confusion: f1-0.2857142857142857, tp-3, fp-15, tn-3, fn-0\n",
+      "pk score: 0.7454545454545455\n",
+      "wd score: 0.8363636363636363\n",
+      "confusion: f1-0.25, tp-2, fp-15, tn-3, fn-0\n",
       "==========================\n",
       "prediction threshold: 0.58\n",
-      "pk score: 0.711864406779661\n",
-      "wd score: 0.7796610169491526\n",
-      "confusion: f1-0.2857142857142857, tp-3, fp-15, tn-3, fn-0\n",
+      "pk score: 0.7454545454545455\n",
+      "wd score: 0.8363636363636363\n",
+      "confusion: f1-0.25, tp-2, fp-15, tn-3, fn-0\n",
       "==========================\n",
       "prediction threshold: 0.59\n",
-      "pk score: 0.7627118644067796\n",
-      "wd score: 0.8305084745762712\n",
-      "confusion: f1-0.23809523809523808, tp-3, fp-16, tn-2, fn-0\n",
+      "pk score: 0.8\n",
+      "wd score: 0.8909090909090909\n",
+      "confusion: f1-0.20000000000000004, tp-2, fp-16, tn-2, fn-0\n",
       "==========================\n",
       "prediction threshold: 0.6\n",
-      "pk score: 0.7627118644067796\n",
-      "wd score: 0.8305084745762712\n",
-      "confusion: f1-0.23809523809523808, tp-3, fp-16, tn-2, fn-0\n",
+      "pk score: 0.8\n",
+      "wd score: 0.8909090909090909\n",
+      "confusion: f1-0.20000000000000004, tp-2, fp-16, tn-2, fn-0\n",
       "==========================\n",
       "============= Predictions Summary =============\n",
-      "best pk: 0.0847457627118644, best prediction threshold: 0.46\n",
-      "P:[1, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0]\n",
-      "R:[0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1]\n",
+      "best pk: 0.09090909090909091, best prediction threshold: 0.46\n",
+      "P:[1, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1]\n",
+      "R:[0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1]\n",
       "\n",
-      "Experiment 1 - VmeEg complete.\n",
+      "Experiment 1 - P7iYl complete.\n",
       "==============================================\n",
       "\n"
      ]
@@ -328,7 +330,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 99;\n",
+       "                var nbb_cell_id = 107;\n",
        "                var nbb_unformatted_code = \"experimentation.run()\";\n",
        "                var nbb_formatted_code = \"experimentation.run()\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -358,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c224e378",
+   "id": "a1d68fe2",
    "metadata": {},
    "outputs": [],
    "source": []
